# GEANT4_Learning

Tutorial10/sim/: action.cc  construction.cc  detector.cc  generator.cc  run.mac  sim.cc
Tutorial11/sim/: CMakeLists.txt  construction.hh  detector.cc  sim.cc
Tutorial12/sim/: action.cc  action.hh  detector.cc  run.cc
Tutorial13/sim/: construction.cc  construction.hh  run1.mac  sim.cc  stepping.cc
Tutorial14/sim/: action.cc  construction.cc  construction.hh  run.cc  run.hh
Tutorial15/sim/: CMakeLists.txt  construction.cc  construction.hh  detector.cc  run.mac  stepping.cc
Tutorial16/sim/: construction.cc  construction.hh  detector.cc  detector.hh  event.cc  generator.cc  physics.hh  run.cc  sim.cc  stepping.hh
Tutorial17/sim/: action.hh  construction.cc  construction.hh  detector.cc  event.hh  generator.cc  physics.cc  sim.cc  vis.mac
Tutorial2/sim/: CMakeLists.txt  sim.cc
Tutorial3/sim/: construction.cc  sim.cc
Tutorial4/sim/: construction.hh  physics.hh  sim.cc
Tutorial5/sim/: action.cc  action.hh  construction.cc  sim.cc
Tutorial6/sim/: construction.cc  generator.hh  sim.cc
Tutorial7/sim/: CMakeLists.txt
Tutorial7/sim/include/: detector.hh
Tutorial7/sim/src/: construction.cc  detector.cc
Tutorial7bak/sim/: construction.cc  detector.cc  detector.hh  (+3 more)
testbak/: CMakeLists.txt  sim.cc
testbak/Andy_Germanium_Detector/: GeometryGeDet.cc
testbak/include/: GeometryGeDet.hh  action.hh  construction.hh  detector.hh  event.hh  physics.hh  run.hh
testbak/src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  run.cc  stepping.cc
(+8 files in other folders)
